# fp-rnn

./: .gitignore  README.md  install_dependencies.sh  pyproject.toml  run_arithmetic_exp.sh  run_catbabi.sh  run_copy_exp.sh  run_word_problem_exp.sh
arithmetic_exp/: __init__.py  eval.py  eval_chomsky.py  lm_model.py  main.py
arithmetic_exp/bedouin/: __init__.py  bedouin.py
arithmetic_exp/configs/: mod_arithmetic_delta_net.yaml  mod_arithmetic_delta_net_2.yaml  mod_arithmetic_delta_rule_fla.yaml  mod_arithmetic_delta_rule_fla_2_0.yaml  mod_arithmetic_diagonal.yaml  mod_arithmetic_diagonal_tanh.yaml  mod_arithmetic_full_matrix.yaml  mod_arithmetic_mamba.yaml  mod_arithmetic_mamba_2.yaml  mod_arithmetic_with_brackets_FPMamba1.yaml  mod_arithmetic_with_brackets_FPMamba2.yaml  mod_arithmetic_with_brackets_GatedDeltaNet.yaml  mod_arithmetic_with_brackets_GatedDeltaProduct.yaml  mod_arithmetic_with_brackets_Mamba1.yaml  mod_arithmetic_with_brackets_delta_net.yaml  mod_arithmetic_with_brackets_delta_net_20.yaml  mod_arithmetic_with_brackets_full_matrix.yaml  mod_arithmetic_with_brackets_mamba.yaml  mod_arithmetic_with_brackets_mamba_2.yaml  mod_arithmetic_with_brackets_xlstm00.yaml  mod_arithmetic_with_brackets_xlstm01.yaml  mod_arithmetic_with_brackets_xlstm10.yaml  mod_arithmetic_xlstm00.yaml  (+15 more)
catbAbI_exp/: construct.py  main.py
copy_exp/: __init__.py  data_utils.py  main.py  model_utils.py  test.py  test_utils.py  train_utils.py
data/: __init__.py
models/: __init__.py  densernn.py  fp_lm.py  fp_mamba2_block.py  fp_mamba_block.py  fp_rnn_block.py  gated_delta_net.py  lstm.py  mixer.py  model_utils.py  transformers.py
plainLM/: __init__.py  bench.py  checkpoint_utils.py  construct.py  eval.py  submit_get_data.py  train.py  utils.py
word_problem_exp/: __init__.py  construct.py  lstm.py  main.py  metrics.py  utils.py  xlstm.py
(+44 files in other folders)
